styles.css
/* Globals */

html {
	font-size: 1rem;
	text-align: center;
	overflow-y: scroll;
	overflow-wrap: break-word;
	background-size: 24px 24px;
	font-family: Georgia, serif;
	-webkit-tap-highlight-color: transparent;
	background-image:
		linear-gradient(#f4f4faff 1px, transparent 0),
		linear-gradient(90deg, #f4f4faff 1px, transparent 0);
}

a {
	color: #000000ff;
	font-weight: 900;
	&:hover {
		opacity: 0.64;
		text-decoration: none;
	}
}

h1 { margin: 0; }

h1, h2 { font-size: 1.2rem; }

h3 { font-size: 1.08rem; }

h4 {
	margin: 0;
	font-weight: normal;
	display: inline-block;
}

pre {
	/* Disable element manipulation */
	user-select: none;
	-ms-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-webkit-touch-callout: none;
		/***/
	font-weight: 900;
	line-height: 100%;
	display: inline-block;
	background-color: #ffffffa3;
}

nav {
	& a {
		font-size: 1.16rem;
		text-decoration: none;
		display: inline-block;
		margin: -16px 8px 0px 8px;
		& #depressed { opacity: 0.64; }
	}
}

/* Classes and IDs */

.print { display: none; }

.passive { color: #666666ff; font-weight: normal; }

.disabled { pointer-events: none; }

.no-print { display: normal; }

.shortcut { margin: 8px auto 24px auto; }

.jump-scroll {
	margin-bottom: 16px;
	display: inline-block;
	text-decoration: none;
}

.v-list { margin-left: -16px; }

.h-list {
	margin-left: -40px;
	li {
		display: inline;
		position: relative;
		&:before { content: "\00a0\00a0\2022\00a0\00a0"; }
		&:first-of-type:before { content: 'Technologies\00a0\00a0\25B8\00a0\00a0'; }
	}
}

#not-found {
	margin: 0;
	font-size: 2rem;
	font-family: serif;
	margin-bottom: 24px;
}

#name {
	display: inline-block;
	text-decoration: none;
}

#resume {
	margin: auto;
	max-width: 768px;
	text-align: left;
	& h1 {
		padding-top: 8px;
		font-size: 2.4rem;
	}
}

#portfolio {
	margin: 16px 0px -16px 0px;
	& figure {
		margin: auto;
		& a { &:hover { opacity: 1; } }
		& img {
			width: 92vw;
			height: auto;
			padding: 4px;
			max-width: 540px;
			border: 4px double #000000ff;
		}
		& figcaption {
			margin-top: 8px;
			font-size: 1.08rem;
			& a { &:hover { opacity: 0.64; } }
		}
		& blockquote {
			max-width: 540px;
			margin-left: auto;
			margin-right: auto;
		}
	}
}

#headshot {
	padding: 4px;
	max-width: 216px;
	margin-top: 16px;
	border: 4px double #000000ff;
}

#socials {
	& img {
		width: 24px;
		height: 24px;
	}
	& a {
		display: inline-block;
		margin: 0px 4px 0px 4px;
	}
	& * { vertical-align: middle; }
}

#terminal {
	border: 2px groove;
	box-sizing: border-box;
	padding: 0px 8px 0px 8px;
	font-family: monospace, Lucida Console, Courier New;
	b { color: #000000ff; }
	a { white-space: normal; }
	pre {
		margin-top: -16px;
		text-shadow: 0.08px 0 0, 0 0.08px 0, 0 -0.08px 0, -0.08px 0 0;
	}
	.project { * { margin: 8px 0px 8px 0px; } }
}

/* "Peter Says" */
@font-face {
	font-family: "HOUSE3009";
	src: url("assets/fonts/HOUSE3009 Spaceage-Heavy-Round Regular.otf");
}

#peter-says {
	margin: auto;
	color: #000000ff;
	padding: 0px 4px;
	max-width: 768px;
	text-align: left;
	& hr { color: #ffffffff; }
	& pre {
		margin: 0;
		font-size: 0.92em;
		font-family: "HOUSE3009";
	}
	& header {
		text-align: center;
		& nav {
			margin-bottom: 24px;
			font-family: "HOUSE3009";
			& a { color: #000000ff; }
		}
	}
	#demonstration {
		padding: 0px;
		margin: 0px 0px 16px 0px;
		text-align: center;
		& .container {
			margin: 0px auto 24px auto;
			padding: 16px;
			position: relative;
			text-align: center;
			border-radius: 16px;
			display: inline-flex;
			box-shadow: 0 8px #000000ff;
			background-color: #ffffffff;
			outline: 2px solid #000000ff;
		}
		& #score {
			top: 52%;
			left: 50%;
			width: 48px;
			color: #ffffffff;
			font-size: 1.2rem;
			position: absolute;
			border-radius: 8px;
			outline-offset: 4px;
			box-sizing:  border-box;
			border: 2px solid #000000ff;
			background-color: #000000ff;
			outline: 2px solid #000000ff;
			font-family: Monospace, serif;
			transform: translate(-50%, -50%);
		}
		& img {
			top: 46%;
			left: 50%;
			width: 128px;
			position: absolute;
			transform: translate(-50%, -50%);
		}
		& .column { float: left; }
		& .btn {
			width: 200px;
			height: 200px;
			cursor: pointer;
			transition: 0.08s;
			border-radius: 16%;
			margin: 16px 6px 16px 6px;
			box-shadow: 0 8px #000000ff;
			outline: 2px solid #000000ff;
			&:active {
				transform: translateY(4px);
				box-shadow: 0 3px #000000ff;
			}
		}
		& #btn-top-left {
			background-color: #dbe4eeff;
			border-radius: 96% 16% 96% 16%;
		}
		& #btn-top-right {
			background-color: #81a4cdff;
			border-radius: 16% 96% 16% 96%;
		}
		& #btn-bttm-left {
			background-color: #255799ff; /* UCI Blue */
			border-radius: 16% 96% 16% 96%;
		}
		& #btn-bttm-right {
			background-color: #3e7cb1ff;
			border-radius: 96% 16% 96% 16%;
		}
		& .game-over {
			color: #000000ff !important;
			background-color: #ffffffff !important;
		}
		& .pressed {
			opacity: 1;
			transform: translateY(4px);
			box-shadow: 0 4px #000000ff;
		}
		& .module {
			margin: 8px;
			width: 240px;
			height: 120px;
			align-items: center;
			border-radius: 16px;
			display: inline-flex;
			justify-content: center;
			background-color: #ffffffff;
			font-size: 1.08rem;
			outline: 2px dashed #000000ff;
			& .led {
				width: 24px;
				height: 24px;
				margin-right: 12px;
				border-radius: 50%;
				background-color: #555759;
			}
		}
	}
	& h1 {
		font-weight: normal;
		margin: 0.67em;
		font-size: 2.16rem;
	}
	& h2, summary {
		font-size: 1.32em;
		font-family: "HOUSE3009";
	}
	& footer { text-align: center; }
}

/* Media queries */

@media screen and (max-width: 359px) { pre { font-size: 0.72rem; } }

@media screen and (min-width: 401px) and (max-width: 440px) { pre { font-size: 0.96rem; } }

@media screen and (min-width: 360px) and (max-width: 400px) { pre { font-size: 0.84rem; } }

@media screen and (min-width: 359px) and (max-width: 440px) { .shortcut { display: none; } }

@media print {
	.print { display: block; }
	.no-print { display: none; }
}

